src/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-header {
  background-color: #222;
  height: 75px;
  padding: 20px;
  color: white;
}

.App-intro {
  font-size: large;
}

.flex {
  width: 100%;
  display: flex;
  justify-content: space-around;
  margin: 0 auto;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

